pkg/kgateway/translator/gateway/testutils/inputs/traffic-policy/extproc-before-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
spec:
  gatewayClassName: kgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: test
spec:
  parentRefs:
  - name: test
  hostnames:
  - "test.com"
  rules:
  - name: rule-before-auth
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /before-auth
  - name: rule-after-auth
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /after-auth
  - name: rule-default
    backendRefs:
    - name: test
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /default
---
apiVersion: v1
kind: Service
metadata:
  name: extproc
spec:
  ports:
  - port: 9091
    protocol: TCP
    appProtocol: kubernetes.io/h2c
    targetPort: 9091
  selector:
    app: extproc
---
apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    test: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: test
